src/objects/Opportunity_Product__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastVersion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MonthlyRecurringRevenue__c</fullName>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product History</relationshipLabel>
        <relationshipName>Oppotunity_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set when the plan is changed.</description>
        <label>Plan Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Change_Reason__c</fullName>
        <label>Price Change Reason</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC Pricing Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Assisted Pricing Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PricingGroup__c</fullName>
        <formula>OpportunityID__r.PricingTestGroup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <label>Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RevenueChange__c</fullName>
        <label>Revenue Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Team__c</fullName>
        <label>Revenue Team</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Month_Downgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Downgrade happened after an upgrade in the same month</description>
        <label>Same Month Downgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Opportunity Record History record originates from a migration from a sub. Used as a base to calculate natural upgrades since migration. Should be used to exclude record from reporting as Created Date is not representative of when revenue was received.</description>
        <inlineHelpText>Indicates if Opportunity Record History record originates from a migration from a sub. Should be used to exclude record from reporting as Created Date is not representative of when revenue was received.</inlineHelpText>
        <label>Sub Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora_Version__c</fullName>
        <description>Version on Zuora Subscription</description>
        <label>Zuora Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isTrial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTrial</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Product History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>